[threaded-animations] animating `offset-path` with a percentage-based `offset-distance` value fails https://bugs.webkit.org/show_bug.cgi?id=310804 rdar://173926809

Reviewed by Sam Weinig.

If the `offset-path` property is animated, any `offset-distance` value that depends on it will
require a styling context to resolve. In those cases, we disable threaded animations for
transform-related properties.

Test: webanimations/threaded-animations/accelerating-offset-path-and-offset-distance.html

* LayoutTests/webanimations/threaded-animations/accelerating-offset-path-and-offset-distance-expected.txt: Added.
* LayoutTests/webanimations/threaded-animations/accelerating-offset-path-and-offset-distance.html: Added.
* Source/WebCore/animation/BlendingKeyframes.cpp:
(WebCore::BlendingKeyframes::analyzeKeyframe):
* Source/WebCore/animation/BlendingKeyframes.h:
(WebCore::BlendingKeyframes::animatesOffsetDistanceToPercentOrCalculated const):
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateAcceleratedEffectsAndBaseValues):

Canonical link: https://commits.webkit.org/311224@main